--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -1,68 +1,54 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    --primary-color: #007bff;
+    --secondary-color: #6c757d;
+    --error-color: #dc3545;
+    --success-color: #28a745;
+    --font-primary: 'Inter', sans-serif;
+    --font-secondary: 'Times New Roman', serif;
+    --base-spacing: 8px;
+    --large-spacing: 16px;
+    --small-spacing: 4px;
+    --font-size-small: 12px;
+    --font-size-medium: 16px;
+    --font-size-large: 20px;
+    --background-light: #fff;
+    --border-radius-large: 20px;
+    --border-radius-medium: 10px;
+    --border-radius-small: 8px;
+    --border-color: #E4E4Eb;
+    --font-color-dark: #28293D;
+    --font-color-light: #fff;
+    --font-color-placeholder: #8F90A6;
+    --font-color-secondary: #555770;
+    --box-shadow: 0px 8px 16px 0px rgba(85, 87, 112, 0.16), 0px 2px 4px 0px rgba(40, 41, 61, 0.04);
+    --accent-color-blue: #6698FA;
+    --input-background: #FAFAFC;
+    --border-color-secondary: #a3aeaf;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    place-items: center;
+    min-width: 320px;
+    min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+
+.button {
+    background-color: var(--primary-color);
+    color: white;
+    padding: var(--small-spacing) var(--large-spacing);
+    font-family: var(--font-primary);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.error-message {
+    color: var(--error-color);
+    font-size: var(--font-size-small);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.success-message {
+    color: var(--success-color);
+    font-size: var(--font-size-medium);
 }
